src/nvcc_target/kernel_decls.h

EXTERN_C void launch_tanh_r16(
  const r16* a,
        r16* b, 
  len_t N
);
EXTERN_C void launch_tanh_r32(
  const r32* a,
        r32* b, 
  len_t N
);
EXTERN_C void launch_tanh_r64(
  const r64* a,
        r64* b, 
  len_t N
);