src/cuda/tensor_types.h

typedef unsigned long len_t;
  typedef __half r16;
// only the size really matters here
// when we compile cuda, we do it via
// nvcc which defines __cplusplus. The
// host code will never use this for
// floating point operations.
typedef struct {
    unsigned short __x;
} r16;
typedef float  r32;
typedef double r64;
typedef struct {
  r16 r;
  r16 i;
} c16;
typedef struct {
  r32 r;
  r32 i;
} c32;
typedef struct {
  r64 r;
  r64 i;
} c64;
/////////////////////////
// used for key sorting

// TODO:
//  Consider making these only r32
//  The padding doesn't make sense
//  for larger types. Could cause
//  problems for large r64?

typedef struct {
  r16 val;
  unsigned key;
} SortPair_r16;
typedef struct {
  r32 val;
  unsigned key;
} SortPair_r32;
typedef struct {
  r64 val;
  unsigned key;
} SortPair_r64;
////////////////////////
// C tensors variants

typedef struct {
  r16* values;
  len_t sizes[MAX_DIMS];
  len_t strides[MAX_DIMS];
  len_t dims;
  len_t len;
} RTensor16;
typedef struct {
  r32* values;
  len_t sizes[MAX_DIMS];
  len_t strides[MAX_DIMS];
  len_t dims;
  len_t len;
} RTensor32;
typedef struct {
  r64* values;
  len_t sizes[MAX_DIMS];
  len_t strides[MAX_DIMS];
  len_t dims;
  len_t len;
} RTensor64;
typedef struct {
  c16* values;
  len_t sizes[MAX_DIMS];
  len_t strides[MAX_DIMS];
  len_t dims;
  len_t len;
} CTensor16;
typedef struct {
  c32* values;
  len_t sizes[MAX_DIMS];
  len_t strides[MAX_DIMS];
  len_t dims;
  len_t len;
} CTensor32;
typedef struct {
  c64* values;
  len_t sizes[MAX_DIMS];
  len_t strides[MAX_DIMS];
  len_t dims;
  len_t len;
} CTensor64;
typedef struct {
  char* values;
  len_t sizes[MAX_DIMS];
  len_t strides[MAX_DIMS];
  len_t dims;
  len_t len;
} QTensor8;
typedef struct {
  len_t order[MAX_DIMS];
} Permutation;
// for small buffer optimizations
typedef struct {
  unsigned items[UINT_BUFFER_SIZE];
  unsigned used;
} UintBuffer;