.zig-cache/o/3baba126df242ac33dce9971e95bd242/cimport.zig

pub const __builtin_bswap16 = @import("std").zig.c_builtins.__builtin_bswap16;
pub const __builtin_bswap32 = @import("std").zig.c_builtins.__builtin_bswap32;
pub const __builtin_bswap64 = @import("std").zig.c_builtins.__builtin_bswap64;
pub const __builtin_signbit = @import("std").zig.c_builtins.__builtin_signbit;
pub const __builtin_signbitf = @import("std").zig.c_builtins.__builtin_signbitf;
pub const __builtin_popcount = @import("std").zig.c_builtins.__builtin_popcount;
pub const __builtin_ctz = @import("std").zig.c_builtins.__builtin_ctz;
pub const __builtin_clz = @import("std").zig.c_builtins.__builtin_clz;
pub const __builtin_sqrt = @import("std").zig.c_builtins.__builtin_sqrt;
pub const __builtin_sqrtf = @import("std").zig.c_builtins.__builtin_sqrtf;
pub const __builtin_sin = @import("std").zig.c_builtins.__builtin_sin;
pub const __builtin_sinf = @import("std").zig.c_builtins.__builtin_sinf;
pub const __builtin_cos = @import("std").zig.c_builtins.__builtin_cos;
pub const __builtin_cosf = @import("std").zig.c_builtins.__builtin_cosf;
pub const __builtin_exp = @import("std").zig.c_builtins.__builtin_exp;
pub const __builtin_expf = @import("std").zig.c_builtins.__builtin_expf;
pub const __builtin_exp2 = @import("std").zig.c_builtins.__builtin_exp2;
pub const __builtin_exp2f = @import("std").zig.c_builtins.__builtin_exp2f;
pub const __builtin_log = @import("std").zig.c_builtins.__builtin_log;
pub const __builtin_logf = @import("std").zig.c_builtins.__builtin_logf;
pub const __builtin_log2 = @import("std").zig.c_builtins.__builtin_log2;
pub const __builtin_log2f = @import("std").zig.c_builtins.__builtin_log2f;
pub const __builtin_log10 = @import("std").zig.c_builtins.__builtin_log10;
pub const __builtin_log10f = @import("std").zig.c_builtins.__builtin_log10f;
pub const __builtin_abs = @import("std").zig.c_builtins.__builtin_abs;
pub const __builtin_labs = @import("std").zig.c_builtins.__builtin_labs;
pub const __builtin_llabs = @import("std").zig.c_builtins.__builtin_llabs;
pub const __builtin_fabs = @import("std").zig.c_builtins.__builtin_fabs;
pub const __builtin_fabsf = @import("std").zig.c_builtins.__builtin_fabsf;
pub const __builtin_floor = @import("std").zig.c_builtins.__builtin_floor;
pub const __builtin_floorf = @import("std").zig.c_builtins.__builtin_floorf;
pub const __builtin_ceil = @import("std").zig.c_builtins.__builtin_ceil;
pub const __builtin_ceilf = @import("std").zig.c_builtins.__builtin_ceilf;
pub const __builtin_trunc = @import("std").zig.c_builtins.__builtin_trunc;
pub const __builtin_truncf = @import("std").zig.c_builtins.__builtin_truncf;
pub const __builtin_round = @import("std").zig.c_builtins.__builtin_round;
pub const __builtin_roundf = @import("std").zig.c_builtins.__builtin_roundf;
pub const __builtin_strlen = @import("std").zig.c_builtins.__builtin_strlen;
pub const __builtin_strcmp = @import("std").zig.c_builtins.__builtin_strcmp;
pub const __builtin_object_size = @import("std").zig.c_builtins.__builtin_object_size;
pub const __builtin___memset_chk = @import("std").zig.c_builtins.__builtin___memset_chk;
pub const __builtin_memset = @import("std").zig.c_builtins.__builtin_memset;
pub const __builtin___memcpy_chk = @import("std").zig.c_builtins.__builtin___memcpy_chk;
pub const __builtin_memcpy = @import("std").zig.c_builtins.__builtin_memcpy;
pub const __builtin_expect = @import("std").zig.c_builtins.__builtin_expect;
pub const __builtin_nanf = @import("std").zig.c_builtins.__builtin_nanf;
pub const __builtin_huge_valf = @import("std").zig.c_builtins.__builtin_huge_valf;
pub const __builtin_inff = @import("std").zig.c_builtins.__builtin_inff;
pub const __builtin_isnan = @import("std").zig.c_builtins.__builtin_isnan;
pub const __builtin_isinf = @import("std").zig.c_builtins.__builtin_isinf;
pub const __builtin_isinf_sign = @import("std").zig.c_builtins.__builtin_isinf_sign;
pub const __has_builtin = @import("std").zig.c_builtins.__has_builtin;
pub const __builtin_assume = @import("std").zig.c_builtins.__builtin_assume;
pub const __builtin_unreachable = @import("std").zig.c_builtins.__builtin_unreachable;
pub const __builtin_constant_p = @import("std").zig.c_builtins.__builtin_constant_p;
pub const __builtin_mul_overflow = @import("std").zig.c_builtins.__builtin_mul_overflow;
pub const len_t = c_ulong;
pub export const WARP_SIZE: len_t = 32;
pub export const UINT_BUFFER_SIZE: len_t = 32;
pub const r16 = extern struct {
    __x: c_ushort = @import("std").mem.zeroes(c_ushort),
};
pub const r32 = f32;
pub const r64 = f64;
pub const c16 = extern struct {
    r: r16 = @import("std").mem.zeroes(r16),
    i: r16 = @import("std").mem.zeroes(r16),
};
pub const c32 = extern struct {
    r: r32 = @import("std").mem.zeroes(r32),
    i: r32 = @import("std").mem.zeroes(r32),
};
pub const c64 = extern struct {
    r: r64 = @import("std").mem.zeroes(r64),
    i: r64 = @import("std").mem.zeroes(r64),
};
pub const SortPair_r16 = extern struct {
    val: r16 = @import("std").mem.zeroes(r16),
    key: c_uint = @import("std").mem.zeroes(c_uint),
};
pub const SortPair_r32 = extern struct {
    val: r32 = @import("std").mem.zeroes(r32),
    key: c_uint = @import("std").mem.zeroes(c_uint),
};
pub const SortPair_r64 = extern struct {
    val: r64 = @import("std").mem.zeroes(r64),
    key: c_uint = @import("std").mem.zeroes(c_uint),
};
pub const RTensor16 = extern struct {
    values: [*c]r16 = @import("std").mem.zeroes([*c]r16),
    sizes: [6]len_t = @import("std").mem.zeroes([6]len_t),
    strides: [6]len_t = @import("std").mem.zeroes([6]len_t),
    dims: len_t = @import("std").mem.zeroes(len_t),
    len: len_t = @import("std").mem.zeroes(len_t),
};
pub const RTensor32 = extern struct {
    values: [*c]r32 = @import("std").mem.zeroes([*c]r32),
    sizes: [6]len_t = @import("std").mem.zeroes([6]len_t),
    strides: [6]len_t = @import("std").mem.zeroes([6]len_t),
    dims: len_t = @import("std").mem.zeroes(len_t),
    len: len_t = @import("std").mem.zeroes(len_t),
};
pub const RTensor64 = extern struct {
    values: [*c]r64 = @import("std").mem.zeroes([*c]r64),
    sizes: [6]len_t = @import("std").mem.zeroes([6]len_t),
    strides: [6]len_t = @import("std").mem.zeroes([6]len_t),
    dims: len_t = @import("std").mem.zeroes(len_t),
    len: len_t = @import("std").mem.zeroes(len_t),
};
pub const CTensor16 = extern struct {
    values: [*c]c16 = @import("std").mem.zeroes([*c]c16),
    sizes: [6]len_t = @import("std").mem.zeroes([6]len_t),
    strides: [6]len_t = @import("std").mem.zeroes([6]len_t),
    dims: len_t = @import("std").mem.zeroes(len_t),
    len: len_t = @import("std").mem.zeroes(len_t),
};
pub const CTensor32 = extern struct {
    values: [*c]c32 = @import("std").mem.zeroes([*c]c32),
    sizes: [6]len_t = @import("std").mem.zeroes([6]len_t),
    strides: [6]len_t = @import("std").mem.zeroes([6]len_t),
    dims: len_t = @import("std").mem.zeroes(len_t),
    len: len_t = @import("std").mem.zeroes(len_t),
};
pub const CTensor64 = extern struct {
    values: [*c]c64 = @import("std").mem.zeroes([*c]c64),
    sizes: [6]len_t = @import("std").mem.zeroes([6]len_t),
    strides: [6]len_t = @import("std").mem.zeroes([6]len_t),
    dims: len_t = @import("std").mem.zeroes(len_t),
    len: len_t = @import("std").mem.zeroes(len_t),
};
pub const QTensor8 = extern struct {
    values: [*c]u8 = @import("std").mem.zeroes([*c]u8),
    sizes: [6]len_t = @import("std").mem.zeroes([6]len_t),
    strides: [6]len_t = @import("std").mem.zeroes([6]len_t),
    dims: len_t = @import("std").mem.zeroes(len_t),
    len: len_t = @import("std").mem.zeroes(len_t),
};
pub const Permutation = extern struct {
    order: [6]len_t = @import("std").mem.zeroes([6]len_t),
};
pub const UintBuffer = extern struct {
    items: [32]c_uint = @import("std").mem.zeroes([32]c_uint),
    used: c_uint = @import("std").mem.zeroes(c_uint),
};
pub const StreamCtx = extern struct {
    ptr: ?*anyopaque = @import("std").mem.zeroes(?*anyopaque),
};
pub extern fn initDevice(c_uint) void;
pub extern fn mpMemAlloc(N: len_t, StreamCtx) ?*anyopaque;
pub extern fn mpMemcpyHtoD(dptr: ?*anyopaque, hptr: ?*const anyopaque, N: len_t, StreamCtx) void;
pub extern fn mpMemcpyDtoH(hptr: ?*anyopaque, dptr: ?*const anyopaque, N: len_t, StreamCtx) void;
pub extern fn mpMemFree(dptr: ?*anyopaque, StreamCtx) void;
pub extern fn mpDeviceSynchronize(...) void;
pub extern fn mpStreamSynchronize(StreamCtx) void;
pub extern fn mpInitStream(...) StreamCtx;
pub extern fn mpDeinitStream(StreamCtx) void;
pub extern fn mpCheckLastError(...) void;
pub extern fn launch_norm_l2_ij_j_r16(stream: StreamCtx, src: [*c]const r16, dst: [*c]r16, m: len_t, n: len_t) void;
pub extern fn launch_norm_l2_ij_j_r32(stream: StreamCtx, src: [*c]const r32, dst: [*c]r32, m: len_t, n: len_t) void;
pub extern fn launch_norm_l2_ij_j_r64(stream: StreamCtx, src: [*c]const r64, dst: [*c]r64, m: len_t, n: len_t) void;
pub extern fn launch_permutate_ij_ji_r16(stream: StreamCtx, src: [*c]const r16, dst: [*c]r16, dst_coef: r16, row: len_t, col: len_t) void;
pub extern fn launch_permutate_ij_ji_r32(stream: StreamCtx, src: [*c]const r32, dst: [*c]r32, dst_coef: r32, row: len_t, col: len_t) void;
pub extern fn launch_permutate_ij_ji_r64(stream: StreamCtx, src: [*c]const r64, dst: [*c]r64, dst_coef: r64, row: len_t, col: len_t) void;
pub extern fn launch_logistic_reverse_r16(stream: StreamCtx, a_grads: [*c]r16, b_value: [*c]const r16, b_grads: [*c]const r16, N: len_t) void;
pub extern fn launch_logistic_reverse_r32(stream: StreamCtx, a_grads: [*c]r32, b_value: [*c]const r32, b_grads: [*c]const r32, N: len_t) void;
pub extern fn launch_logistic_reverse_r64(stream: StreamCtx, a_grads: [*c]r64, b_value: [*c]const r64, b_grads: [*c]const r64, N: len_t) void;
pub extern fn launch_zscore_i_i_r16(stream: StreamCtx, src: [*c]const r16, dst: [*c]r16, n: len_t) void;
pub extern fn launch_zscore_i_i_r32(stream: StreamCtx, src: [*c]const r32, dst: [*c]r32, n: len_t) void;
pub extern fn launch_zscore_i_i_r64(stream: StreamCtx, src: [*c]const r64, dst: [*c]r64, n: len_t) void;
pub extern fn launch_tanh_r16(stream: StreamCtx, a: [*c]const r16, b: [*c]r16, n: len_t) void;
pub extern fn launch_tanh_r32(stream: StreamCtx, a: [*c]const r32, b: [*c]r32, n: len_t) void;
pub extern fn launch_tanh_r64(stream: StreamCtx, a: [*c]const r64, b: [*c]r64, n: len_t) void;
pub extern fn launch_extract_sort_keys_i_r16(stream: StreamCtx, pairs: [*c]const SortPair_r16, keys: [*c]c_uint, n: len_t) void;
pub extern fn launch_extract_sort_keys_i_r32(stream: StreamCtx, pairs: [*c]const SortPair_r32, keys: [*c]c_uint, n: len_t) void;
pub extern fn launch_extract_sort_keys_i_r64(stream: StreamCtx, pairs: [*c]const SortPair_r64, keys: [*c]c_uint, n: len_t) void;
pub extern fn launch_sigmoid_r16(stream: StreamCtx, a: [*c]const r16, b: [*c]r16, N: len_t) void;
pub extern fn launch_sigmoid_r32(stream: StreamCtx, a: [*c]const r32, b: [*c]r32, N: len_t) void;
pub extern fn launch_sigmoid_r64(stream: StreamCtx, a: [*c]const r64, b: [*c]r64, N: len_t) void;
pub extern fn launch_cce_loss_i_i_r16(stream: StreamCtx, src_value: [*c]const r16, src_grads: [*c]r16, trg: c_uint, scratch: [*c]r16, redux: [*c]f32, m: len_t) void;
pub extern fn launch_cce_loss_i_i_r32(stream: StreamCtx, src_value: [*c]const r32, src_grads: [*c]r32, trg: c_uint, scratch: [*c]r32, redux: [*c]f32, m: len_t) void;
pub extern fn launch_cce_loss_i_i_r64(stream: StreamCtx, src_value: [*c]const r64, src_grads: [*c]r64, trg: c_uint, scratch: [*c]r64, redux: [*c]f32, m: len_t) void;
pub extern fn launch_minmax_ij_j_r16(stream: StreamCtx, A: [*c]const r16, B: [*c]r16, m: len_t, n: len_t) void;
pub extern fn launch_minmax_ij_j_r32(stream: StreamCtx, A: [*c]const r32, B: [*c]r32, m: len_t, n: len_t) void;
pub extern fn launch_minmax_ij_j_r64(stream: StreamCtx, A: [*c]const r64, B: [*c]r64, m: len_t, n: len_t) void;
